--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
-    <string name="app_name">DataBases</string>
+    <string name="app_name">finalProoject</string>
+
+    <string name="open_nav">Open</string>
+    <string name="close_nav">Close</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello Admin</string>
 </resources>
