--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">DataBases</string>
+    <string name="app_name">Coupify</string>
 
     <string name="open_nav">Open</string>
     <string name="close_nav">Close</string>
